# edin-mls-26-spring

./: README-install-omer.md  benchmark_comparison_omer.txt  new_benchmark_comparison_omer.txt  pyproject.toml  run_benchmark_omer.sh
hw1-asr/: TILE_TUNING.md  bench_warmup.py  benchmark_tile_sizes.py  optimization1_report.md  optimization2_report.md  optimization3_report.md  optimization4_report.md  overall.md
hw1-asr/glm_asr_triton_template/: attention.py  layers.py  rope.py
utils/: setup-triton-uv.sh
