[project]
name = "edin-mls-26-spring"
version = "0.1.0"
description = "Edinburgh MLS 26 Spring - Triton tutorial environment"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "triton",
    "datasets",
    "transformers",
    "accelerate",
]

[dependency-groups]
gpu = [
    "cupy-cuda12x",
]
dev = []
